* update php-parver to 4.x develop * add rlues from PSR-1:  - no iclude  - no ini_set  - one class per file  - use namespace

--- a/.phplint.yaml
+++ b/.phplint.yaml
@@ -2,3 +2,7 @@ parserOptions:
   phpVersion: 7
 rules:
   eqeqeq: "error"
+  NoInclude: "error"
+  NoIniSet: "error"
+  UseNamespace: "error"
+  OneClass: "error"
