WIP: Rule from PSR 1 (#2)
* travis add lint code by phplint
* fix code by PhpLint
* helper: StringHelper from PHPCS
* vendor: StringTemplate
* start write SourceCode
* docs: add logical comment docs
* add rule:
  - ClassMethodCamelCase
  - ConstantsUpperCase
  - NoEcho
  - NoInlineHtml

--- a/.phplint.yaml
+++ b/.phplint.yaml
@@ -1,8 +1,13 @@
 parserOptions:
   phpVersion: 7
 rules:
-  eqeqeq: "error"
+  ClassMethodCamelCase: "error"
+  Eqeqeq: "error"
   NoInclude: "error"
-  NoIniSet: "error"
+  NoShortOpenTag: "error"
   UseNamespace: "error"
+  ConstantsUpperCase: "error"
+  NoEcho: "error"
+  NoIniSet: "error"
+  NoInlineHtml: "error"
   OneClass: "error"
