--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ php:
   - '7.1'
   - nightly
 install: composer install
-script: composer run-script test
+script:
+  - composer run-script test
+  - composer run-script lint
